k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taxi-prod
  labels:
    app: rudra-taxi
    environment: production
