k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grafana
  namespace: taxi-prod
  labels:
    app: grafana

spec:
  replicas: 1

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      containers:
        - name: grafana

          image: grafana/grafana:latest

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000
              name: http

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000

            initialDelaySeconds: 60
            periodSeconds: 20

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000

            initialDelaySeconds: 30
            periodSeconds: 10

          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana

      volumes:
        - name: grafana-storage
          emptyDir: {}
