k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taxi-backend-service
  namespace: taxi-prod
  labels:
    app: taxi-backend
spec:
  selector:
    app: taxi-backend
  ports:
    - port: 8080
      targetPort: 8080
      name: http
      protocol: TCP
  type: ClusterIP
